# BHiPPO

./: .gitignore  README.md  pyproject.toml
bayeshippo/: __init__.py  basis.py  bayesian.py  bounds.py  data.py  hippo.py  kalman.py  metrics.py  srif.py  sweep.py  unhippo.py  window_priors.py
experiments/: e1_noise_robustness.py  e2_irregular_sampling.py  e3a_copying_gaps.py  e5_ablations.py  plot_sweep.py  sweep_measure_mixture.py  sweep_noisy_reconstruction.py  sweep_window_prior_copying.py  synthetic_reconstruction.py
paper/: main_v04.aux  main_v04.out  main_v04.tex  refs.bib
runs/e1_full/: config.json  results.jsonl
runs/e1_quick/: config.json  results.jsonl
runs/e2_full/: config.json
runs/e2_quick/: config.json  results.jsonl
runs/e3a_full/: config.json  results.jsonl
runs/e3a_quick/: config.json  results.jsonl
runs/e5/: config.json
runs/mixture_quick/: results.jsonl
runs/mixture_quick_v2/: config.json  results.jsonl
runs/mixture_quick_v3/: results.jsonl
runs/noisy_quick/: results.jsonl
runs/noisy_quick_v2/: config.json  results.jsonl
runs/window_copy_quick/: results.jsonl
runs/window_copy_quick_v2/: results.jsonl
runs/window_copy_quick_v3/: config.json  results.jsonl
scripts/: prototype_hindsight_scoring.py  verify_transport.py
tests/: test_basis_sweeps.py  test_bayesian.py  test_bounds_kalman.py  test_legs_discretization.py  test_legt_reconstruction.py  test_srif.py  test_transport.py  test_window_priors.py
