[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayeshippo"
version = "0.2.0"
description = "Bayesian time-relevance measures for HiPPO memory"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "BayesHiPPO contributors"}]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "torch>=2.0",
  "pandas>=1.5",
  "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]
experiments = ["tqdm>=4.65"]

[tool.setuptools.packages.find]
include = ["bayeshippo*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
